k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automation-laravel
  labels:
    name: automation-laravel
    app: liberu-automation
